Page MenuHome GnuPG

auto-key-retrieve does not work if keyserver is set in dirmngr.conf instead of gpg.conf
Closed, ResolvedPublic

Description

http://git.gnupg.org/cgi-bin/gitweb.cgi?p=gnupg.git;a=commit;h=f3959f14b6c496c726bbca5230becb7b6844a234

With this commit, it seems that keyserver is recommended to be set in
dirmngr.conf. However, keyserver option "auto-key-retrieve" will only work if
keyserver is set in gpg.conf

Details

Version
2.1.9

Event Timeline

tom.ty89 added a project: Bug Report.
tom.ty89 added a subscriber: tom.ty89.

Right. This needs to be fixed. Thanks for reporting.

werner set Due Date to Jan 20 2016, 1:00 AM.Jan 15 2016, 12:55 PM

Fixed with commit 09117e7 to be released with 2.1.11

werner added a project: Restricted Project.Jan 21 2016, 11:55 AM
werner claimed this task.
werner removed a project: Restricted Project.